--- a/SystemClockMod/Locales/en-US.json
+++ b/SystemClockMod/Locales/en-US.json
@@ -1,4 +1,5 @@
 ﻿{
+  "Options.SECTION[SystemClockMod.SystemClockMod.Mod]": "System Clock",
   "SystemClock.AnteMeridiem": "AM",
   "SystemClock.PostMeridiem": "PM",
   "SystemModClock.Languege.DisplayName": "English (US)"
