--- a/SystemClockMod/Locales/ko-KR.json
+++ b/SystemClockMod/Locales/ko-KR.json
@@ -1,4 +1,5 @@
 ﻿{
+  "Options.SECTION[SystemClockMod.SystemClockMod.Mod]": "시스템 시계",
   "SystemClock.AnteMeridiem": "오전",
   "SystemClock.PostMeridiem": "오후",
   "SystemModClock.Languege.DisplayName": "한국어"
