--- a/SystemClockMod/Locales/en-UK.json
+++ b/SystemClockMod/Locales/en-UK.json
@@ -1,5 +1,5 @@
 ﻿{
-  "Options.SECTION[SystemClockMod.SystemClockMod.Mod]": "시스템 시계",
+  "Options.SECTION[SystemClockMod.SystemClockMod.Mod]": "System Clock",
   "SystemClock.AnteMeridiem": "AM",
   "SystemClock.PostMeridiem": "PM",
   "SystemModClock.Languege.DisplayName": "English (UK)"
