--- a/SystemClockMod/Locales/ko-KR.json
+++ b/SystemClockMod/Locales/ko-KR.json
@@ -1,7 +1,7 @@
 ﻿{
   "Options.SECTION[SystemClockMod.SystemClockMod.Mod]": "시스템 시계",
-  "Options.OPTION[SystemClockMod.SystemClockMod.Mod.Setting.ClockSize]": "시계 크기",
-  "Options.OPTION_DESCRIPTION[SystemClockMod.SystemClockMod.Mod.Setting.ClockSize]": "시계 크기를 설정합니다. AdvancedSimulationSpeed 등 하단 패널을 사용하는 모드와 이 모드를 함께 사용하는 경우 시계 크기를 크게 하지 않는 것을 권장합니다.",
+  "Options.OPTION[SystemClockMod.SystemClockMod.Mod.Setting.ClockSizeSetting]": "시계 크기",
+  "Options.OPTION_DESCRIPTION[SystemClockMod.SystemClockMod.Mod.Setting.ClockSizeSetting]": "시계 크기를 설정합니다. AdvancedSimulationSpeed 등 하단 패널을 사용하는 모드와 이 모드를 함께 사용하는 경우 시계 크기를 크게 하지 않는 것을 권장합니다.",
   "Options.SystemClock.SystemClockMod.Mod.ClockSize[Small]": "작게",
   "Options.SystemClock.SystemClockMod.Mod.ClockSize[Medium]": "중간",
   "Options.SystemClock.SystemClockMod.Mod.ClockSize[Large]": "크게",
