--- a/SystemClockMod/Locales/ko-KR.json
+++ b/SystemClockMod/Locales/ko-KR.json
@@ -2,9 +2,9 @@
   "Options.SECTION[SystemClockMod.SystemClockMod.Mod]": "시스템 시계",
   "Options.OPTION[SystemClockMod.SystemClockMod.Mod.Setting.ClockSizeSetting]": "시계 크기",
   "Options.OPTION_DESCRIPTION[SystemClockMod.SystemClockMod.Mod.Setting.ClockSizeSetting]": "시계 크기를 설정합니다. AdvancedSimulationSpeed 등 하단 패널을 사용하는 모드와 이 모드를 함께 사용하는 경우 시계 크기를 크게 하지 않는 것을 권장합니다.",
-  "Options.SystemClockMod.SystemClockMod.Mod.ClockSize[Small]": "작게",
-  "Options.SystemClockMod.SystemClockMod.Mod.ClockSize[Medium]": "중간",
-  "Options.SystemClockMod.SystemClockMod.Mod.ClockSize[Large]": "크게",
+  "Options.SystemClockMod.SystemClockMod.Mod.CLOCKSIZE[Small]": "작게",
+  "Options.SystemClockMod.SystemClockMod.Mod.CLOCKSIZE[Medium]": "중간",
+  "Options.SystemClockMod.SystemClockMod.Mod.CLOCKSIZE[Large]": "크게",
   "Options.OPTION[SystemClockMod.SystemClockMod.Mod.Setting.DisplaySeconds]": "초 단위 표시",
   "Options.OPTION_DESCRIPTION[SystemClockMod.SystemClockMod.Mod.Setting.DisplaySeconds]": "활성화 할 경우 초 단위 까지의 시각을 표시합니다.",
   "SystemClockMod.AnteMeridiem": "오전",
